fixed sidebar cell spacing

--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,8 @@ body {
 }
 .sidebar-link {
     display: flex;
-    min-height: 25px;  
+    height: 25px;  
+    align-items: center;
 }
     
 .header {
